<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:gravity="start"
    android:orientation="vertical">


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:background="#ffffff"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_name"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/my_text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:background="#ffffff"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_date"
        android:inputType="date"
        android:textAlignment="textStart"
        android:textColor="@color/my_text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:background="#ffffff"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_phone"
        android:inputType="phone"
        android:textAlignment="textStart"
        android:textColor="@color/my_text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:background="#ffffff"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_number"
        android:inputType="number"
        android:textAlignment="textStart"
        android:textColor="@color/my_text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:background="#ffffff"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_email"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textColor="@color/my_text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:background="#ffffff"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_text"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColor="@color/my_text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:background="#ffffff"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textColor="@color/my_text_color"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />


</LinearLayout>